\name{NEWS}
\title{NEWS file for the QDiabetes pacakge}
\section{Changes in version 0.1.1}{
  \itemize{
    \item Initial creation of a working version of the QDiabetes package.
  }
}