@@ -9,3 +9,4 @@
 - Add tests to check that the input and output vector lengths match for the QDR*() functions.
 - Alter the assessment of the binary variables to use values likely to produce larger risk estimates, e.g. age = 65, bmi = 40, fpg = 6.9, hba1c = 47.9. This should make any discrepancies larger.
 - Add unit tests that use with(), dplyr and data.table to make sure the package works as intended in data frames. A weird error was being thrown before because of how gender/pcos/gestdiab were being checked. Need more thoroughness here.
+- Make a vignette that uses postcode data to produce a map of deprivation in inner London.
