@@ -2,13 +2,13 @@ bibentry(bibtype = "Manual",
          title = "QDiabetes: A Package to Calculate 10-Year Risk of Type 2 Diabetes",
          author = person(c("Benjamin", "G"), "Feakins"),
          year = 2020,
-         note = "R package version 0.1.1",
+         note = "R package version 0.1.2",
          url = "https://github.com/Feakster/qdiabetes",
          header = "To cite QDiabetes in publications use:",
          key = "QDiabetes-package",
 
          textVersion = paste("Benjamin G. Feakins (2020).",
                              "QDiabetes: A Package to Calculate 10-Year Risk of Type 2 Diabetes.",
-                             "R package version 0.1.1,",
+                             "R package version 0.1.2,",
                              "URL https://github.com/Feakster/qdiabetes")
 )
