@@ -5,3 +5,10 @@
     \item Initial creation of a working version of the QDiabetes package.
   }
 }
+\section{Changes in version 0.1.2}{
+  \itemize{
+    \item Made the examples in the \code{\link{QDRA}}, \code{\link{QDRB}} and \code{\link{QDRC}} documentation a little more interesting.
+    \item Set the postcode-to-Townsend backend dataset to load upon package load, as opposed to lazyloading upon first execution of the getTDS function.
+    \item Added postcode data to the \code{\link{dat_qdr}} sample dataset to allow for exploration of the \code{\link{getTDS}} function.
+  }
+}
